--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="/catalog">Shop</a></li>
+                    {% if session.get('user_id') %}
+                    <li class="nav-item"><a class="nav-link" href="/order_history">Order History</a></li>
+                    {% endif %}
                     <li class="nav-item"><a class="nav-link" href="/cart">Cart</a></li>
                     {% if session.get('user_id') %}
                         <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
